--- a/Generator.ipynb
+++ b/Generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a4ebef1a-0b1f-4434-95b0-89118724e5bb",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "eaf120af-526b-422b-abca-63d9fe4c7d39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_csv(dict, output_path, append=True): \n",
+    "def generate_csv(base, genes, amp, oligos, clones, output_path, append=True): \n",
     "    \"\"\"    \n",
     "    generates a csv to output_path to organize sequencing prep based on dict. dict should come from generate_dict. \n",
     "    returns nx2 matrix of indexes and final files names\n",
@@ -26,14 +26,16 @@
     "    \n",
     "    # TODO: maybe use pandas for csv writing to simplify code\n",
     "    \n",
-    "    header = dict['header']\n",
+    "    header = ['base', 'index', 'gene', 'amp', 'oligos', 'clones']\n",
     "    matrix = []\n",
     "    index = 1\n",
-    "    for i in range(len(dict['genes'])): \n",
-    "        for j in range(len(dict['clones'])): \n",
-    "            for k in range(len(dict['clones'][j])): \n",
-    "                matrix.append([dict['base'], index, dict['genes'][i], dict['clones'][j][k], dict['oligos'][j][k]])\n",
-    "                index += 1\n",
+    "    for i in range(len(genes)): \n",
+    "        for j in range(len(amp[i])): \n",
+    "            for k in range(len(oligos[i][j])):\n",
+    "                for l in range(clones):\n",
+    "                    matrix.append([base, index, genes[i], amp[i][j], oligos[i][j][k], l+1])\n",
+    "                    index += 1\n",
+    "                \n",
     "    edit = \"a\" if append else \"w\"\n",
     "    csv_file = open(output_path, edit)\n",
     "    csvwriter = csv.writer(csv_file)\n",
@@ -42,32 +44,62 @@
     "    csvwriter.writerows(matrix)\n",
     "    csv_file.close()\n",
     "    \n",
-    "    return generate_names(matrix)\n",
-    "\n",
+    "    ret_mat = []\n",
+    "    for row in matrix:\n",
+    "        ret_mat.append([row[1], str(row[1])+'_'+base+'_'+row[2]+'_amp_'+row[3]+'_seq_'+str(row[4])+'_clone_'+str(row[5])])\n",
+    "    \n",
+    "    return ret_mat\n",
+    "#TODO: assertions for inputs, documentation. possibly: easier way to input seq oligos, wrapper function?\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3a9bffcb-db09-436d-b20b-b4fde6f0bf01",
+   "execution_count": 20,
+   "id": "dd61d3d2-099b-42a1-ab78-df07f00dc2fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_dict(base, genes, clones, oligos, oligos_first=False, same_last=False): \n",
+    "write_csv('Test Data/name_ref.csv',generate_csv('base', ['gene1'], [['10_22','1_2']], [[[1,2,3],[1,5,6]]], 2, \"Test Data/full_data.csv\", append=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "701f5700-a046-4141-b8ef-bec33a80c26f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_dict(base, genes, amp, oligos, clones, oligos_first=True, same_last=False): \n",
     "    \"\"\"\n",
     "    generates dict to pass into generate_csv()\n",
     "    \n",
     "    examples/info for inputs: \n",
     "        base: string\n",
     "        genes: [gene1, gene2...]\n",
-    "        clones: [[1-3], [4-6]...] (must match genes, may want to automate this somehow)\n",
-    "        oligos: [[2, 3, 4], [2, 6, 7]...] (dimensions must match clones)\n",
+    "        amp: [['10_22','33_14'], ['1_2','3_4']...] (len(amp) == len(genes)) amplification oligos\n",
+    "        oligos: [[[2, 3, 4], [2, 6, 7]], [[1, 2, 3], [4, 5, 6]]...] (len(oligos)==len(genes) && len(oligos[i])==len(amp[i]))\n",
+    "        clones: natural number\n",
+    "        \n",
     "        clones_first: if true, clones higher in heirarchy than oligos. \n",
     "        same_oligos: if true, oligos can just be [24, 5, 3] and assume applies to all sets of clones\n",
     "    \"\"\"\n",
-    "    result = {};\n",
-    "    if not oligos_first: \n",
+    "    result = {}\n",
+    "    result['header'] = ['base', 'index', 'gene', 'amp', 'oligos', 'clones']\n",
+    "    result['amp'] = amp\n",
+    "    result['oligos'] = oligos\n",
+    "    clones['clones'] = clones\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a9c4876-4618-4665-88a2-17ee4d0c1316",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"if not oligos_first: \n",
     "        result['header'] = ['base', 'index', 'gene', 'clone', 'oligo']\n",
     "        if not same_last: \n",
     "            result['clones'] = clones\n",
@@ -102,12 +134,21 @@
     "    \n",
     "    \n",
     "    \n",
-    "    return result"
+    "    return result\n",
+    "    \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "444c6748-e8e7-4a04-ae19-1e73ffe5be62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "574799c1-5bb2-4dad-ab43-ce30dc1eee3a",
    "metadata": {},
    "outputs": [],
@@ -135,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "5e2bb4cf-1a34-41f1-bc19-5b2238eb75f3",
    "metadata": {},
    "outputs": [],
@@ -154,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "62218d79-2e0d-4b23-aa87-9e85937148fb",
    "metadata": {},
    "outputs": [],
@@ -164,30 +205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "204d411c-8a8a-4ee8-a380-0ff7c6f7f9c9",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "dict = generate_dict('20220303', \n",
-    "                     ['arpc3-mNG_homozygote_knockins_'],\n",
+    "dict = generate_dict('2022', \n",
+    "                     ['test1', 'test2'],\n",
     "                     ['amp_213_215' for x in range(7)],\n",
     "                     [215, 13, 99, 100, 43, 41, 220, 213],\n",
-    "                     oligos_first=False,\n",
+    "                     oligos_first=True,\n",
     "                     same_last=True)\n",
-    "matrix = generate_csv(dict, \"Test Data/name_ref.csv\", append=False)\n",
+    "matrix = generate_csv(dict, \"Test Data/full_data.csv\", append=False)\n",
     "# should be writing to a diff csv (so reference and naming csv different), just writing to same one for testing purposes\n",
     "write_csv(\"Test Data/name_ref.csv\", matrix)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd61d3d2-099b-42a1-ab78-df07f00dc2fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
